Zoph 0.7.0.6 release: fix for xss security issue

--- a/php/credits.html
+++ b/php/credits.html
@@ -211,4 +211,8 @@
     <th>Hans Verbrugge</th>
     <td>Bugfix</td>
   </tr>
+  <tr>
+    <th>&quot;y3nh4ck3r&quot;</th>
+    <td>Security issue</td>
+  </tr>
 </table>
